@@ -10,7 +10,7 @@ if [ ! -e "$MAIN_DIR/bin/classpath.gen" ]; then
     exit -1
 fi
 
-JAVA_ARGS="-Xms256m -Xmx256m -cp `cat $MAIN_DIR/bin/classpath.gen` \
+JAVA_ARGS="-Xms256m -Xmx256m -XX:MaxPermSize=128m -cp `cat $MAIN_DIR/bin/classpath.gen` \
   -Dnet.sf.farrago.home=$MAIN_DIR \
   -Dorg.eigenbase.util.AWT_WORKAROUND=off \
   -Djava.util.logging.config.file=$MAIN_DIR/trace/Trace.properties"
